# ollama-webui

./: .gitignore  CHANGELOG.md  Caddyfile  README.md  docker-compose.yml  index.html  style.css
certs/: generate.sh
chatterbox/: Dockerfile  main.py  pyproject.toml  server.ts  voice_synthesizer.py
js/: actions.js  chat.js  config.js  input.js  markdown.js  messages.js  state.js
searxng/: settings.yml
